# koala

./: CMakeLists.txt  InputParser.cpp  InputParser.h  Interval.cpp  Interval.h  IntervalGroup.tpp  ccomponent.cpp  ccomponent.h  drawingutils.cpp  drawingutils.h  fileutils.cpp  fileutils.h  helpers.cpp  helpers.h  koala-demo.sh  levenshtein.h  main.cpp  matutils.cpp  matutils.h  meanshift.cpp  meanshift.h  ocrutils.cpp  ocrutils.h  plotutils.cpp  plotutils.h  preprocessing.cpp  preprocessing.h  randomColour.cpp  randomColour.h  reference.cpp  reference.h  table.cpp  table.h  tableComparison.cpp  tableComparison.h  tableExtract.cpp  utils.cpp  utils.h  wordBB.cpp  wordBB.h
